--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "graphql": "^14.3.0",
     "graphql-yoga": "^1.17.4",
     "jsonwebtoken": "^8.5.1",
+    "prisma": "^1.34.0",
+    "prisma-binding": "^2.3.11",
+    "prisma-cli": "^1.0.9",
     "redis": "^2.8.0",
     "sequelize": "^5.8.6",
     "uuid": "^3.3.2"
