--- a/src/prisma.yml
+++ b/src/prisma.yml
@@ -1,3 +1,4 @@
 endpoint: http://localhost:4466
+# endpoint: https://us1.prisma.sh/react/blog/dev
 datamodel: datamodel.graphql
 databaseType: document
