--- a/src/variables.env
+++ b/src/variables.env
@@ -1,5 +1,5 @@
 FRONTEND_URL="http://localhost:3000"
-PRISMA_ENDPOINT="http://localhost:4466"
+PRISMA_ENDPOINT="https://us1.prisma.sh/react/blog/dev"
 PORT=4000
 PRISMA_SECRET="omgplzdonttellanyone123456"
 APP_SECRET="jwtsecret123456"
